[Add]skillup1 portfolio

--- a/skillup1.html
+++ b/skillup1.html
@@ -9,7 +9,9 @@
   <header>
     <nav>
       <ul class="nav-list">
-        <li class="nav-item">MySite</li>
+        <li class="nav-item">
+          <img src = "img/logo.png" class="nav-item-img">
+        </li>
         <li class="nav-item">Portfolio</li>
         <li class="nav-item">Feature</li>
         <li class="nav-item">Profile</li>
@@ -18,22 +20,30 @@
     </nav>
   </header>
   <main>
-    <h1>Lorem lpsum</h1>
-    <p>simply dummy text of the printing</p>
-  </main>
-  <div>
-    <h2 class="portfolio">Portfolio</h2>
-    <div class="portfolio-text">
-      <br>
-      <br>
-      <br>
+    <div class="main-visual">
+      <div class="main-box">
+        <h1 class="main-text">Lorem lpsum</h1>
+        <p class="main-subtext">simply dummy text of the printing</p>
+      </div>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  </main>
+  <div class="portfolio-bigbox">
+  <div class="portfolio-box">
+    <h2>Portfolio</h2>
+    <div class="portfolio-text">
+      It is a long<br />
+      content of a page when<br />
+      The poilnt of using Lorenm<br />
+    </div>
+    <div class="portfolio-item">
+      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "" class="portfolio-image"></div>
+    </div>
+  </div>
   </div>
   </body>
 </html>
