--- a/skillup1.html
+++ b/skillup1.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/9d76fcc85a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="skillup1.css" />
     <title>skillup1</title>
   </head>
@@ -27,23 +28,101 @@
       </div>
     </div>
   </main>
-  <div class="portfolio-bigbox">
-  <div class="portfolio-box">
-    <h2>Portfolio</h2>
-    <div class="portfolio-text">
+  <section class="portfolio-bigbox">
+    <div class="portfolio-box">
+      <h2>Portfolio</h2>
+    <div class="text">
       It is a long<br />
       content of a page when<br />
       The poilnt of using Lorenm<br />
     </div>
     <div class="portfolio-item">
-      <div><img src = "" class="portfolio-image"></div>
-      <div><img src = "" class="portfolio-image"></div>
-      <div><img src = "" class="portfolio-image"></div>
-      <div><img src = "" class="portfolio-image"></div>
-      <div><img src = "" class="portfolio-image"></div>
-      <div><img src = "" class="portfolio-image"></div>
+      <div><img src = "img/talk.jpg" class="portfolio-image"></div>
+      <div><img src = "img/websuku.png" class="portfolio-image"></div>
+      <div><img src = "img/write.jpg" class="portfolio-image"></div>
+      <div><img src = "img/webcamp.png" class="portfolio-image"></div>
+      <div><img src = "img/sketch.jpg" class="portfolio-image"></div>
+      <div><img src = "img/webcamp-mother.png" class="portfolio-image"></div>
     </div>
   </div>
-  </div>
+  </section>
+  <section>
+    <div class="feature-box">
+      <h2>Feature</h2>
+      <div class="text">
+        It is<br />
+        content<br />
+        The point<br />
+      </div>
+      <div class="feature-minibox">
+        <div class="feature-item">
+          <i class="fas fa-check-circle"></i>
+          <p class="feature-text">Strength1</p>
+          <p class="text">tesuto</p>
+        </div>
+        <div class="feature-item"> 
+          <i class="fas fa-check-double"></i>
+          <p class="feature-text">Strength2</p>
+          <p  class="text">tesuto</p>
+        </div>
+        <div class="feature-item">
+          <i class="fas fa-thumbs-up"></i>
+          <p class="feature-text">Strength3</p>
+          <p class="text">tesuto</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="profile-bigbox">
+    <div class="profile-box">
+      <h2>Profile</h2>
+      <div class="text">
+        It is<br />
+        content<br />
+        The point<br />
+      </div>
+      <div class="profile-minibox">
+      <div class="profile-item">
+        <img src = "img/my-icon.jpg" class="profile-image">
+      </div>
+      <div class="profile-item">
+        <p class="profile-maintext">MyName</p>
+        <p class="profile-item-text">Isshiki Naoki</p>
+        <p class="profile-maintext">MySkills</p>
+        <p class="profile-item-text">HTML/CSS/Ruby</p>
+      </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="contact-box">
+      <h2>Contact</h2>
+      <div class="text">
+        It is<br />
+        content<br />
+        The point<br />
+      </div>
+    </div>
+    <div class="contact-minibox">
+      <div class="contact-item">
+        <div class="contact-items">
+        <p class="contact-item-text">Mail</p>
+        <p class="contact-item-minitext">piero@docomo.jp</p>
+        <p class="contact-item-text">Tel</p>
+        <p class="contact-item-minitext">0000-000-000</p>
+        </div>
+      </div>
+      <div class="contact-item">
+        <div class="contact-items">
+        <p class="contact-item-text">SNS</p>
+        <p class="contact-item-icon">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-instagram"></i>
+        </p>
+        </div>
+      </div>
+    </div>
+  </section>
   </body>
 </html>
