--- a/skillup1.html
+++ b/skillup1.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9d76fcc85a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="skillup1.css" />
     <title>skillup1</title>
@@ -17,6 +18,11 @@
         <li class="nav-item">Feature</li>
         <li class="nav-item">Profile</li>
         <li class="nav-item">COntact</li>
+        <li id="humberger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </li>
       </ul>
     </nav>
   </header>
@@ -46,7 +52,7 @@
     </div>
   </div>
   </section>
-  <section>
+  <section class="feature-bigbox">
     <div class="feature-box">
       <h2>Feature</h2>
       <div class="text">
@@ -58,17 +64,17 @@
         <div class="feature-item">
           <i class="fas fa-check-circle"></i>
           <p class="feature-text">Strength1</p>
-          <p class="text">tesuto</p>
+          <p class="feature-minitext">tesuto</p>
         </div>
         <div class="feature-item"> 
           <i class="fas fa-check-double"></i>
           <p class="feature-text">Strength2</p>
-          <p  class="text">tesuto</p>
+          <p  class="feature-minitext">tesuto</p>
         </div>
         <div class="feature-item">
           <i class="fas fa-thumbs-up"></i>
           <p class="feature-text">Strength3</p>
-          <p class="text">tesuto</p>
+          <p class="feature-minitext">tesuto</p>
         </div>
       </div>
     </div>
@@ -94,7 +100,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="contact-bigbox">
     <div class="contact-box">
       <h2>Contact</h2>
       <div class="text">
@@ -124,5 +130,8 @@
       </div>
     </div>
   </section>
+  <footer>
+    <div class="footer-text">@webcamp</div>
+  </footer>
   </body>
 </html>
